--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.12.3
 certifi==2025.8.3
 charset-normalizer==3.4.3
 discord.py==2.5.2
+feedparser==6.0.12
 frozenlist==1.7.0
 h11==0.16.0
 h2==4.3.0
@@ -20,6 +21,7 @@ multidict==6.6.4
 propcache==0.3.2
 python-dotenv==1.0.1
 requests==2.32.5
+sgmllib3k==1.0.0
 sniffio==1.3.1
 soupsieve==2.8
 typing_extensions==4.15.0
